front/src/app/styles/tailwind.css
/* ... */
@layer basis {
    @font-face {
        font-family: 'PlusJakartaSan';
        src: url('../../shared/assets/fonts/PlusJakartaSan.ttf') format('truetype');
        font-weight: 100 900;
        font-style: normal;
    }

    body {
        font-family: var(--font-sans);
        color: var(--color-dark);
        background-color: var(--color-white);
        font-size: theme('fontSize.base');
    }

    svg {
        @apply fill-current stroke-current;
    }

    /* === react-h5-audio-player START === */
    .rhap_container {
        background: transparent !important;
        box-shadow: none !important;
    }
    .rhap_progress-filled,
    .rhap_progress-indicator {
        background: var(--color-blue-b1) !important;
    }
    .rhap_progress-bar {
        background: var(--color-gray-g3) !important;
    }
    .rhap_time {
        color: var(--color-gray-g1) !important;
        font-size: 0.7rem !important;
    }
    .rhap_button-clear {
        color: var(--color-dark) !important;
    }
    /* === react-h5-audio-player END === */

    /* === react-select START === */
    .rs__control {
        @apply !rounded-3xl !shadow-none;
        background-color: var(--color-underground-primary) !important;
        border-color: var(--color-gray-g3) !important;
    }
    .rs__control--is-focused {
        border-color: var(--color-gray-g3) !important;
        @apply !shadow-none;
    }
    .rs__menu {
        background-color: var(--color-underground-primary) !important;
        border: 1px solid var(--color-gray-g3) !important;
    }
    .rs__single-value {
        color: var(--color-dark) !important;
    }
    .rs__option {
        background-color: transparent !important;
        color: var(--color-dark) !important;
    }
    .rs__option--is-focused {
        background-color: var(--color-underground-secondary) !important;
    }
    .rs__option--is-selected {
        background-color: var(--color-light-l2) !important;
    }
    .rs__indicator-separator {
        background-color: var(--color-gray-g3) !important;
    }
    .rs__dropdown-indicator {
        color: var(--color-gray-g1) !important;
    }
    /* === react-select END === */

    input:focus {
        outline: none;
        border: none;
    }

    input:focus-visible {
        outline: none;
    }

    /* Chrome, Edge, Safari */
    textarea::-webkit-scrollbar {
        width: 1px;
        height: 1px;
    }

    textarea::-webkit-scrollbar-track {
        background: var(--color-scrollbar-track);
        border-radius: 2px;
    }

    textarea::-webkit-scrollbar-thumb {
        background-color: var(--color-scrollbar-thumb);
        border-radius: 4px;
        /*border: 2px solid #f0f0f0;*/
    }

    textarea::-webkit-scrollbar-thumb:hover {
        background-color: var(--color-scrollbar-thumb);
    }

    /* Firefox */
    textarea {
        scrollbar-width: thin;
        scrollbar-color: var(--color-scrollbar-thumb) var(--color-scrollbar-track); /* thumb color, track color */
    }
}
/* ... */

